--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^6.0.1",
+        "bootstrap": "^5.3.8",
         "vue": "^3.5.21",
         "vue-router": "^4.5.1"
     }
