--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^6.0.1",
         "bootstrap": "^5.3.8",
+        "file-saver": "^2.0.5",
+        "sweetalert2": "^11.23.0",
         "vue": "^3.5.21",
-        "vue-router": "^4.5.1"
+        "vue-router": "^4.5.1",
+        "vue-sweetalert2": "^5.0.11",
+        "xlsx": "^0.18.5"
     }
 }
