--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^6.0.1",
         "bootstrap": "^5.3.8",
+        "bootstrap-icons": "^1.13.1",
         "chart.js": "^3.9.1",
         "chartjs-plugin-datalabels": "^2.2.0",
         "file-saver": "^2.0.5",
