--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "chart.js": "^3.9.1",
         "chartjs-plugin-datalabels": "^2.2.0",
         "file-saver": "^2.0.5",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^3.0.4",
         "sweetalert2": "^11.23.0",
         "vue": "^3.5.21",
         "vue-chart-3": "^3.1.8",
